<resources>
    <string name="app_name">The Resistance Clone</string>
    <string name="host_game">Host Game</string>
    <string name="wait">Waiting for other players</string>
    <string name="ready">Ready</string>
    <string name="start">Start Game</string>
    <string name="join_game">Join Game</string>
    <string name="name">Player Name</string>
    <string name="name_hint">Enter Player Name</string>
    <string name="num_players">Number of Players</string>
    <string name="submit">Submit</string>
    <string name="confirm">Confirm</string>
    <string name="settings_targeting">Targeting</string>
    <string name="settings_idiot_proof">Idiot Proof</string>
    <string name="settings_blind_spies">Blind Spies</string>
    <string name="settings_color_blind">Color Blind</string>
    <string name="settings_spy_reveal_phase">Spy Reveal Phase</string>
    <string name="room_code">Room Code</string>
    <string name="room_code_hint">Enter 6-Letter Room Code</string>
    <string name="resistance_logo">Resistance Logo</string>
    <string name="spy_logo">Spy Logo</string>
    <string name="reveal_prompt">Everyone close your eyes.\n\nSpies open your eyes. Look around and
        make sure that you know all the other Spies.\n\nSpies close your eyes. Everyone\'s eyes
        should be closed.\n\nEveryone open your eyes.</string>
    <string name="initial_num_players">5</string>
    <string name="mission">Mission </string>
    <string name="team">Team:</string>
    <string name="success">Success</string>
    <string name="fail">Fail</string>
</resources>
