<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectMissionTeam">

    <LinearLayout
        android:id="@+id/ll_mission_markers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_mission_marker_1"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/ic_panorama_fish_eye_black_24dp"
            android:clickable="false"
            android:gravity="center"
            android:onClick="onClickMission"
            android:tag="1"
            android:text="2"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="287dp" />

        <TextView
            android:id="@+id/tv_mission_marker_2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/ic_panorama_fish_eye_black_24dp"
            android:clickable="false"
            android:gravity="center"
            android:onClick="onClickMission"
            android:tag="2"
            android:text="3"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="287dp" />

        <TextView
            android:id="@+id/tv_mission_marker_3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/ic_panorama_fish_eye_black_24dp"
            android:clickable="false"
            android:gravity="center"
            android:onClick="onClickMission"
            android:tag="3"
            android:text="2"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="287dp" />

        <TextView
            android:id="@+id/tv_mission_marker_4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/ic_panorama_fish_eye_black_24dp"
            android:clickable="false"
            android:gravity="center"
            android:onClick="onClickMission"
            android:tag="4"
            android:text="3"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="287dp" />

        <TextView
            android:id="@+id/tv_mission_marker_5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_weight="1"
            android:background="@drawable/ic_panorama_fish_eye_black_24dp"
            android:clickable="false"
            android:gravity="center"
            android:onClick="onClickMission"
            android:tag="5"
            android:text="3"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="287dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_vote_tracker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_mission_markers">

        <TextView
            android:id="@+id/tv_vote_tracker_1"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/ic_gps_not_fixed_black_24dp"
            android:gravity="center"
            android:text="1"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="287dp" />

        <TextView
            android:id="@+id/tv_vote_tracker_2"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/ic_gps_not_fixed_black_24dp"
            android:gravity="center"
            android:text="2"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="287dp" />

        <TextView
            android:id="@+id/tv_vote_tracker_3"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/ic_gps_not_fixed_black_24dp"
            android:gravity="center"
            android:text="3"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="287dp" />

        <TextView
            android:id="@+id/tv_vote_tracker_4"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/ic_gps_not_fixed_black_24dp"
            android:gravity="center"
            android:text="4"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="287dp" />

        <TextView
            android:id="@+id/tv_vote_tracker_5"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:background="@drawable/ic_gps_not_fixed_black_24dp"
            android:gravity="center"
            android:text="5"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="66dp"
            tools:layout_editor_absoluteY="287dp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_mission_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/mission"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_vote_tracker" />

    <TextView
        android:id="@+id/tv_mission_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="2 (1 Fail)"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mission_title" />

    <TextView
        android:id="@+id/tv_team_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/team"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_mission_info" />

    <ScrollView
        android:id="@+id/sv_team_selection"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@+id/btn_confirm_mission"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_team_title">

        <LinearLayout
            android:id="@+id/ll_team_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_confirm_mission"
        style="@android:style/Widget.Holo.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:onClick="confirmTeamSelection"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>